# ydav-gtk4

./: Cargo.toml  build.rs  main.css
resource/: main.css  resources.gresource.xml
src/: config.rs  main.rs  politic.in  read_json_android.rs  send_command_android.rs  sql.in
src/contact/: contact.rs  mod.rs
src/contact_add/: contact_add.rs  mod.rs
src/contact_delete/: contact_delete.rs  mod.rs
src/contact_object/: imp.rs  mod.rs
src/info/: info.rs  mod.rs
src/log_object/: imp.rs  mod.rs
src/phone/: mod.rs  phone.rs
src/phone_delete/: mod.rs  phone_delete.rs
src/phone_object/: imp.rs  mod.rs
src/sms_input/: mod.rs  sms_input.rs
src/sms_input_delete/: mod.rs  sms_input_delete.rs
src/sms_input_object/: imp.rs  mod.rs
src/sms_output/: mod.rs  sms_output.rs
src/sms_output_object/: imp.rs  mod.rs
src/ussd/: mod.rs  ussd.rs
