[package]
name = "ydav-gtk4"
version = "1.3.0"
edition = "2021"
build = "build.rs"


[dependencies]
async-std = "1.13.0"
gtk4= { version = "0.9.6", features = ["v4_12"] }
gdk4="0.9.6"
serde_json="*"
serde = { version = "*", features = ["derive"] }
sqlite = "0.36.2"
regex = "1.11.1"
chrono = "0.4.39"
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
[build-dependencies]
glib-build-tools = "0.20.0"
[package.metadata.appimage]
auto_link = true
